@@ -1,0 +1,7 @@
+port 1888
+
+listener 1889
+mount_point mount/
+
+log_type debug
+
